fix spacing

--- a/components/ide_code/ide_code.css
+++ b/components/ide_code/ide_code.css
@@ -18,7 +18,7 @@
   font-size: 14px;
   font-family: 'open sans';
   margin:10px;
-  padding-right: 100px;
+  padding-right: 120px;
   word-break: break-all;
 }
 
